fixed hero section animation z-index , placed vice chair card besides chairman , fixed the pictures problem with the placeholder once again

--- a/src/ComponentsStyling/HeroContent.css
+++ b/src/ComponentsStyling/HeroContent.css
@@ -31,7 +31,7 @@
       linear-gradient(to right, rgba(44, 171, 226, 0.03) 1px, transparent 1px),
       linear-gradient(to bottom, rgba(44, 171, 226, 0.03) 1px, transparent 1px);
     background-size: 100% 100%, 30px 30px, 30px 30px;
-    z-index: 2;
+    z-index: 0;
     opacity: 0.5;
   }
   
@@ -65,6 +65,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 0;
   }
   
   .globe-overlay {
